# Python-Mentoring-Labs-for-Junior-Engineers

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/labs/: __init__.py  arithmetic.py  cli.py  lottery.py  money.py  text.py
tests/: test_arithmetic.py  test_lottery.py  test_money.py  test_text.py
