[project]
name = "labs"
version = "0.1.0"
description = "Small Python labs as pure, tested functions with a CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
labs = "labs.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C4", "PTH", "RET", "ARG", "TC", "PL", "A"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool"]
mypy_path = "src"
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --strict-config"
